--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -16,7 +16,7 @@
 
 \begin{picture}(0,0)
 
-\put(-110,-743){\rotatebox{90}{NNT: 2020UPASA000}}
+\put(-110,-743){\rotatebox{90}{NNT: }}
 \end{picture}
 
 % \vspace{-12mm}
@@ -35,7 +35,7 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 
 \normalsize
 \color{black}
-\Large{\textit{Propriétés catalytiques à l'échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de diffraction cohérente.}}
+\Large{\textit{Propriétés catalytiques à l'échelle nanométrique sondées par diffraction des rayons X de surface et imagerie de diffraction cohérente}}
 %*****************************************************
 
 \vspace{1.5cm}
@@ -67,16 +67,16 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 \arrayrulecolor{Prune}
 {\footnotesize \textbf{Composition du jury}}\\
 & \\
-\textbf{Andreas Stierle} & Rapporteur \\
-Professor, University of Hamburg / DESY, Hamburg & \\
 \textbf{Thomas Cornélius} & Rapporteur \\
 Directeur de recherche, IM2NP, Marseille & \\
-\textbf{Dina Carbone} & Examinatrice \\
+\textbf{Andreas Stierle} & Rapporteur \\
+Professor, University of Hamburg / DESY, Hamburg & \\
+\textbf{Gerardina Carbone} & Examinatrice \\
 Researcher, Lund University, Lund & \\
-\textbf{Sylvain Ravy} & Examinateur \\
-Directeur de recherche, LPS, Orsay & \\
 \textbf{Virginie Chamard} & Examinatrice \\
 Directrice de recherche, Institut Fresnel, Marseille & \\
+\textbf{Sylvain Ravy} & Examinateur \\
+Directeur de recherche, LPS, Orsay & \\
 
 \end{tabular} 
 
