--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -184,7 +184,7 @@ The roughening of the catalyst surface can double the active surface area \paren
     \label{fig:Gauzes}
 \end{figure}
 
-The deactivation of Pt-Rh industrial catalysts after long exposure times have been explained by rhodium enrichment, and the presence of rhodium oxides \parencite{Fierro1992, Bergene1996}.
+The deactivation of Pt-Rh industrial catalysts after long exposure times have been explained by rhodium enrichment, and the presence of rhodium oxides \parencite{Fierro1990, Fierro1992, Bergene1996}.
 However, a deactivation process was also reported on pure Pt catalyst \parencite{Ostermaier1974}, linked to the presence of platinum oxides \parencite{Ostermaier1976}.
 
 The role of volatile surface oxides in the roughening and etching of the catalyst surface was theorised by Wei et al. \parencite*{Wei1996}, and confirmed experimentally by Nilsen et al. \parencite*{Nilsen2001}.
@@ -234,7 +234,7 @@ A high oxygen coverage of the catalyst was linked to the formation of \ce{NO}, s
 The importance of adsorbed oxygen species to prevent spontaneous \ce{NO} dissociation was confirmed, confirming previous works \parencite{Bradley1995}.
 In a second study, increasing the \ce{O_2}/\ce{NH_3} ratio to 10 pushed \ce{NO} selectivity to almost \qty{100}{\percent}, \ce{N_2} and \ce{N_2O} production being both suppressed by favouring \ce{NO} desorption \parencite{PerezRamirez2009}.
 
-The advent of density-functional theory (DFT) brought forward theoretical explanations of the reaction mechanism for the first time.
+The advent of density functional theory (DFT) brought forward theoretical explanations of the reaction mechanism for the first time.
 For example, a study combining DFT calculations and temporal analysis of products (TAP) by Baerns et al. \parencite*{Baerns2005} confirmed the importance of adsorbed surface oxygen (\ce{O_a}) and hydroxyl groups (\ce{OH_a}) for the de-hydrogenation of \ce{NH_3} on the catalyst surface.
 \ce{N_2O} could only be detected at ambient pressures, \ce{N_2} is favoured at lower temperature, whereas \ce{NO} is favoured at higher temperatures.
 Importantly for the use of model catalysts, no difference in the temperature dependant production of \ce{N_2} and \ce{NO} between a Pt(533) single crystal, Pt foil, and knitted Pt gauzes could be observed.
@@ -433,7 +433,7 @@ Integrating the evolution of the catalyst surface structure with the nature of a
 
 \section{Thesis outline}
 
-The first chapter of the thesis has presented the history of the oxidation of ammonia, and its societal impacts, setting the stage of this thesis.
+The first chapter has briefly presented the history of the oxidation of ammonia, and its societal impacts, setting the stage of this thesis.
 
 The second chapter will provide a concise overview of heterogeneous catalysis, and the fundamental principles governing the interaction between x-rays and matter.
 This section emphasises the origins, advantages, and constraints of each technique used in the study, highlighting how x-rays can indirectly observe catalytic reactions by detecting unique markers left on the materials.
@@ -442,11 +442,11 @@ Additionally, the thesis presents the software used for data reduction and analy
 A description of the software \textit{Gwaihir} \parencite{Simonne2022}, which aims to facilitate the reduction and analysis of data in the \textit{Python} programming language, while encouraging broader adoption of the technique through a user-friendly graphical interface, is provided.
 
 The third and fourth chapters present results from the \textit{operando}, near-ambient pressure study of catalytic reactions using synchrotron techniques.
-Pt nanoparticles and single crystals are employed to explore the structure-selectivity relationship at ambient pressure and high temperature, by the means of a vast array of \ce{O_2}/\ce{NH_3} ratios, favouring either the production of \ce{N_2} or \ce{NO}.
+Pt nanoparticles and single crystals are employed to explore the structure-selectivity relationship at ambient pressure and high temperature, by the means of a vast array of \ce{O_2}/\ce{NH_3} partial pressure ratios, favouring either the production of \ce{N_2} or \ce{NO}.
 The presence of platinum oxides is monitored in order to understand its importance in the reaction mechanism, as well as in potential catalyst reconstructions.
 Thus, the difference in activity between different crystalline facets is studied with different samples that, together, offer a good compromise between industrial catalysts and compatibility with the experimental setup of synchrotron beamlines.
-Complementary studies with x-ray photoelectron spectroscopy are performed at the same ammonia to oxygen ratio and temperature.
+Complementary studies with x-ray photoelectron spectroscopy are performed at the same \ce{O_2}/\ce{NH_3} ratio and temperature.
 Information about the presence or not of nitrogen and oxygen species on the catalyst surface will improve the understanding of the reaction mechanism.
 Finally, to explore the correlation between surface structure and catalytic activity, mass spectrometry data is collected simultaneously to all measurements.
 
-The last chapter will serve as a general conclusion, resuming the results obtained from each technique, and detailing the perspective enabled by this thesis.
+The last chapter will serve as a general conclusion, resuming the results obtained from each technique, and detailing the perspectives enabled by this thesis.
