--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -81,9 +81,9 @@ As an example, platinum (Pt) nanoparticles are of great interest for the petroch
     \includegraphics[height=4cm]{/home/david/Documents/PhD/Figures/sample/sxrd_sample.png}
     \caption{
         Catalytically active samples studied with x-ray \textit{operando} techniques.
-        Reconstructed Pt particle measured at SixS, with its surface coloured by the displacement of surface layers from their equilibrium positions, diameter of about \qty{300}{\nm} (left).
+        Left: reconstructed Pt particle (diameter \qty{300}{\nm}) measured at SixS, with its surface coloured by the phase values linked to the displacement of surface layers from their equilibrium positions.
         The orientation of each facet on the particle surface is indicated.
-        Pt $(111)$ single crystal used in SXRD and XPS experiments, diameter of about \qty{8}{\mm} (right).
+        Right: Pt $(111)$ single crystal used in SXRD and XPS experiments, diameter of about \qty{8}{\mm}.
         $\{111\}$ facets are present on both samples, occupying \qty{\approx36}{\percent} of the particle surface.
     }
     \label{fig:Samples}
@@ -94,7 +94,7 @@ The orientation and structure of each facet on the nanoparticle surface, describ
 The formation of surface oxides on specific facets of Pt-Rh nanoparticles has also been correlated with an increased activity during the oxidation of \ce{CO} \parencite{Hejral2018}.
 The morphology and shape of supported nanoparticles was shown to be linked to the type of facets present on the nano-catalyst surface \parencite{Ndolomingo2020}.
 Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Huang2008, Jiang2009}.
-Calle-Valejo et al. \parencite*{CalleVallejo2014, CalleVallejo2015, CalleVallejo2018, CalleVallejo2023} have used DFT calculations to show an approximate linear trend between the \textit{generalised} coordination number $\overline{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
+Calle-Valejo et al. \parencite*{CalleVallejo2014, CalleVallejo2015, CalleVallejo2018, CalleVallejo2023} have used DFT calculations to show an approximate linear trend between the \textit{generalised} coordination number $\overline{CN}(i)$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
 Their work highlights the importance of taking into account not only the number of first-nearest neighbours, but also the number of second nearest neighbours.
 The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
 
@@ -102,7 +102,7 @@ The \textit{Taylor ratio} translates this effect by defining the fraction betwee
     \overline{CN}(i) = \sum_{j=1}^{n_i} \frac{cn(j)}{cn_{max}}
     \label{eq:CN}
 \end{equation}
-where \textit{cn} is the coordination number of the surface site, and $cn_{max}$ the maximum number of first nearest neighbour in the bulk.
+where $cn(j)$ is the coordination number of the surface site for atom $j$, and $cn_{max}$ the maximum number of first nearest neighbour in the bulk.
 
 However, strong adsorption sites are not always the most active sites, following the Sabatier principle, it is possible that if the adsorption is too strong, there is no subsequent desorption of the reaction product \parencite{Nilsson2005, Jiang2009}.
 
