--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -37,7 +37,7 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
     \caption{
     Left: 2D diffraction pattern collected using BCDI at the SixS beamline (SOLEIL synchrotron)
     Middle: reciprocal space in-plane map collected using SXRD at the SixS beamline.
-    Right: near ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected using XPS at the B07 beamline (Diamond synchrotron).
+    Right: near ambient pressure XPS spectra measured during a transition between two atmospheres (\ce{Ar}  and \ce{O2}), collected using XPS at the B07 beamline (Diamond synchrotron).
     }
     \label{fig:TechniquesDataExamples}
 \end{figure}
