--- a/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
+++ b/Sections/3_Results_Nanoparticles/BCDIOxidationAmmonia.tex
@@ -1,7 +1,7 @@
-\subsection{particle structure evolution during ammonia oxidation at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}}\label{sec:BCDIAmmoniaOxidation}
+\subsection{Particle structure evolution during ammonia oxidation at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}}\label{sec:BCDIAmmoniaOxidation}
 
-particle \textit{A} being unstable on the substrate during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
-Two nanoparticles were identified on the substrate, first measured at room temperature under inert argon atmosphere.
+Particle \textit{A} being unstable on the substrate during the oxidation of ammonia at \qty{600}{\degreeCelsius}, the reaction was measured at lower temperatures before and after the catalyst light off, respectively \qty{300}{\degreeCelsius}, and \qty{400}{\degreeCelsius}.
+Two particles, namely \textit{B} and \textit{C}, were identified on the substrate, first measured at room temperature under inert argon atmosphere.
 
 The support of particle \textit{B} (fig. \ref{fig:B7Facets}) was well determined at room temperature, exhibiting a round shape with a total of 30 facets.
 Approximately \qty{76}{\percent} of the particle surface voxels were recognised to belong to facets.
@@ -56,10 +56,10 @@ Most importantly, the large particle does not exhibit high Miller index facets.
     \centering
     \begin{tabular}{@{}llllll@{}}
     \toprule
-    Facet Type & \{100\} & \{110\} & \{111\} & \{113\} & Undefined \\
+        & \{100\} & \{110\} & \{111\} & \{113\} & Undefined \\
     \midrule
-    Particle B & \qty{10.5}{\percent} (6) & \qty{23.1}{\percent} (9) & \qty{35.2}{\percent} (8) & \qty{7.3}{\percent} (7) & \qty{23.9}{\percent} \\
-    Particle C & \qty{10.8}{\percent} (6) &  \qty{6.4}{\percent} (8) & \qty{36.3}{\percent} (8) & \qty{0}{\percent}       & \qty{46.5}{\percent} \\
+    Particle B (\qty{300}{\nm} wide) & \qty{10.5}{\percent} (6) & \qty{23.1}{\percent} (9) & \qty{35.2}{\percent} (8) & \qty{7.3}{\percent} (7) & \qty{23.9}{\percent} \\
+    Particle C (\qty{800}{\nm} wide) & \qty{10.8}{\percent} (6) &  \qty{6.4}{\percent} (8) & \qty{36.3}{\percent} (8) & \qty{0}{\percent}       & \qty{46.5}{\percent} \\
     \bottomrule
     \end{tabular}%
     \caption{
@@ -67,6 +67,8 @@ Most importantly, the large particle does not exhibit high Miller index facets.
     }
     \label{tab:FacetCoverage}
 \end{table}
+
+% particule a et rajouter conditions
 
 Together with particle \textit{A}, this results shows that the sample used during this experiment is covered with many different nanoparticles that all together contribute to the catalytic activity, and probably show an even greater variance of shape and size.
 The current analysis using BCDI aim to reveal the structure variation during a catalytic reaction of a few selected nanoparticles.
@@ -115,23 +117,20 @@ Increasing the temperature to \qty{400}{\degreeCelsius} under inert atmosphere w
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/B7/B7_orthogonalized_4098_edited.pdf}
     % \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/B7/B7_orthogonalized_4110.pdf}
     \caption{
-        Sum of the intensity scattered from particle $C$ around the (111) platinum Bragg peak in the $\vec{q}_x$, $\vec{q}_z$ and $\vec{q}_y$ directions after orthogonalisation of the diffraction pattern.
-        a) After removal of both oxygen and ammonia in the reactor at \qty{300}{\degreeCelsius}, \textit{i.e.} under argon atmosphere.
-        b) After heating up to \qty{400}{\degreeCelsius} under argon atmosphere.
-        c) Under the presence of \qty{80}{\milli\bar} of oxygen and \qty{10}{\milli\bar} of ammonia in the reactor at \qty{400}{\degreeCelsius}.
+        Sum of the intensity scattered from particle \textit{B} around the (111) platinum Bragg peak in the $\vec{q}_x$, $\vec{q}_z$ and $\vec{q}_y$ directions after orthogonalisation of the diffraction pattern.
         The [111]-oriented crystal truncation rod is visible parallel to the $\vec{q}_z$ axis.
-        Detector gaps lead to areas of missing intensity.
+        Detector gaps lead to reactangular areas of missing intensity.
     }
     \label{fig:B7Ortho}
 \end{figure}
 
 A signal parallel to the crystal truncation rod in the [111] direction is observed slightly shifted in $\vec{q}_y$, interfringes in the [111] direction are also visible with a slightly lower interval than on the original CTR.
 The distance between the [111] oriented rod and the second signal increases in $q_y$ during the ammonia oxidation cycle, at the end of which a third signal parallel to the two others can be observed (fig. \ref{fig:B7Ortho} - c).
-The maximum of both signals seems to be at the same value in $q_z$, which can be related to the average lattice parameter inside the particle.
+The maximum of both signals seems to be at the same value in $q_z$, which can be related to the average out-of-plane lattice parameter inside the particle.
 
 The defects are also visible perpendicularly to the particle substrate and through the particle in 3D in appendix \ref{app:AppendixB7}, ultimately resulting in holes in the Bragg electronic density \parencite{Clark2015, Dupraz2015}.
 
-The intensity scattered from particle $C$ around the (111) platinum Bragg peak was summed along the ($\vec{q}_x$, $\vec{q}_y$), ($\vec{q}_y$, $\vec{q}_z$) and ($\vec{q}_z$, $\vec{q}_x$) planes, and respectively fitted in the $\vec{q}_z$, $\vec{q}_x$ and $\vec{q}_y$ directions.
+The intensity scattered from particle \textit{B} around the (111) platinum Bragg peak was summed along the ($\vec{q}_x$, $\vec{q}_y$), ($\vec{q}_y$, $\vec{q}_z$) and ($\vec{q}_z$, $\vec{q}_x$) planes, and respectively fitted in the $\vec{q}_z$, $\vec{q}_x$ and $\vec{q}_y$ directions.
 ($\vec{x}$, $\vec{y}$, $\vec{z}$) designates the sample frame, where the $\vec{z}$ direction is parallel to the [111] direction from the epitaxy relationship of the particle on the substrate.
 The sum in the planes perpendicular to the $\vec{q}_x$ and $\vec{q}_y$ directions carry information about the in-plane particle shape and strain, whereas the sum perpendicular to the $\vec{q}_z$ direction carries information about the out-of-plane particle shape and strain.
 
@@ -146,7 +145,7 @@ A typical fit is shown in appendix \ref{fig:FitB73D}, the retrieved FWHM are sho
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/B7/fwhm_B7_two_peaks.pdf}
     \caption{
         Evolution of the full width at half maximum (FWHM) for particle B in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
-        The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
+        The reproduction of measurements at fixed conditions yields multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
     }
     \label{fig:B7FWHM}
 \end{figure}
@@ -177,29 +176,29 @@ The particle shape is not reversible at \qty{400}{\degreeCelsius} after the oxid
     \caption{
         Evolution of the interplanar spacing $d_{111}$ and homogeneous strain $\epsilon_{111, homo}$ for particle B as a function of the ammonia to oxygen ratio.
         The reference for the computation of $\epsilon_{111, homo}$ was taken as the mean value at \qty{25}{\degreeCelsius}.
-        The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
+        The reproduction of measurements at fixed conditions yields multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
     }
     \label{fig:B7Latpara}
 \end{SCfigure}
 
-Two main phenomena of interest must be kept in mind from the evolution of the interplanar spacing in fig. \ref{fig:B7Latpara}, besides the expected increase of the lattice parameter from the increase of temperature, verified in the previous section.
+Two main phenomena of interest must be kept in mind from the evolution of the interplanar spacing in fig. \ref{fig:B7Latpara}, besides the expected increase with temperature, verified in the previous section.
 First there is a \qty{0.08}{\percent} increase of the homogeneous strain following the introduction of ammonia at \qty{300}{\degreeCelsius}.
 The interplanar spacing stays approximately equal to the same value afterwards during the ammonia oxidation cycle.
 Secondly, there is an increase of about \qty{0.02}{\percent} of the homogeneous strain at \qty{400}{\degreeCelsius} when the ammonia to oxygen ratio reaches the value of one.
 Both of these phenomena are observed at conditions for which changes in the FWHM are also seen.
 
-Finally, to be able to give a first estimation of the amount of strain inside the particle, the strain field energy defined as the sum of the product of stress and strain integrated over the particle \parencite{Cahn1959} was computed following the work performed by Ulvestad et al in \cite*{Ulvestad2015a} and by Kim et al. \cite*{Kim2019}.
+Finally, to be able to give a first estimation of the amount of strain inside the particle, the strain field energy defined as the sum of the product of stress and strain integrated over the particle \parencite{Cahn1959} was computed following the work performed by Ulvestad et al \parencite*{Ulvestad2015a} and by Kim et al. \parencite*{Kim2019}.
 
 Assuming cubic symmetry and isotropic shear-free conditions within the unit cell, the strain field energy is simplified to eq. \ref{eq:SFE}.
-Here, $G$ and $L$ represent the material's Lame parameters, which can be estimated from Young's modulus $E$ and Poisson ratio $\nu$, as described in eq. \ref{eq:GandNu} \parencite{Mavko2020}.
+Here, $G$ and $L$ represent the material's Lame constants, which can be estimated from Young's modulus $E$ and Poisson ratio $\nu$, as described in eq. \ref{eq:GandNu} \parencite{Mavko2020}.
 
 \begin{equation}
-    E_s = \frac{2G + 3I}{2} \int \Big( \frac{\partial u_{111}}{\partial x_{111}}\Big)^2 dV
+    E_s = \frac{2G + 3L}{2} \int \Big( \frac{\partial u_{111}}{\partial x_{111}}\Big)^2 dV
     \label{eq:SFE}
 \end{equation}
 
 \begin{align}
-    G = \frac{E}{2(1+\nu)} \qquad & \qquad \lambda = \frac{E \nu}{(1+\nu)*(1-2\nu)}
+    G = \frac{E}{2(1+\nu)} \qquad & \qquad L = \frac{E \nu}{(1+\nu)(1-2\nu)}
     \label{eq:GandNu}
 \end{align}
 
@@ -217,7 +216,7 @@ For a qualitative approximation of the strain field energy, the Young's modulus 
 \end{figure}
 
 The strain field energy shows very little evolution at \qty{300}{\degreeCelsius}, decreasing a little under the presence of ammonia and further under reacting conditions.
-However, the values of the strain field energy are observed to increase under reacting conditions at \qty{400}{\degreeCelsius}, multiplied approximately by \num{3} when the \ce{O_2}/\ce{NH_3} ratio is equal to 1, and by \num{9} when the \ce{O_2}/\ce{NH_3} ratio is equal to 8.
+However, the values of the strain field energy are observed to increase under reacting conditions at \qty{400}{\degreeCelsius}, multiplied approximately by \num{3} when the \ce{O_2}/\ce{NH_3} ratio is equal to 1, and by \num{9} when equal to 8.
 This result is consistent with the evolution of the different FWHM in fig. \ref{fig:B7FWHM} and with the 3D shape of the particle.
 
 To summarise, the introduction of ammonia at \qty{300}{\degreeCelsius} has resulted in (i) a slight increase of the in-plane strain, observed from the evolution of the peak FWHM in the $\vec{q}_x$ and $\vec{q}_y$ directions in fig. \ref{fig:B7FWHM}; in (ii) a large increase of the homogeneous strain, observed from the value of the $d_{111}$ interplanar spacing in fig. \ref{fig:B7Latpara}, which was not reversed after the removal of ammonia following the end of the oxidation cycle.
@@ -225,7 +224,7 @@ These changes can be linked to the first reduction of the particle, previously o
 No changes in the particle strain and structure as a function of the ammonia to oxygen ratio could be detected at \qty{300}{\degreeCelsius}.
 
 The most important changes in the particle structure occur at \qty{400}{\degreeCelsius}.
-Heating the temperature of the reactor under inert atmosphere has resulted in the appearance of a defect visible directly in reciprocal space (fig. \ref{fig:B7Ortho}), and by the evolution of FWHM$_y$ (fig. \ref{fig:B7FWHM}).
+Heating the sample under inert atmosphere has resulted in the appearance of a defect visible directly in reciprocal space (fig. \ref{fig:B7Ortho}), and by the evolution of FWHM$_y$ (fig. \ref{fig:B7FWHM}).
 The increase of strain inside the particle is also visible in 3D by the progressive importance of holes in the reconstructed volume (app. \ref{app:AppendixB7}), and by the evolution of the strain field energy (fig. \ref{fig:B7SFE}).
 Interestingly, a transition is observed during the simultaneous presence of both ammonia and oxygen in the reactor, when \ce{O_2}/\ce{NH_3} = 1 (scans 3951, 3958 and 4002).
 This transition is also visible in FWHM$_z$ (fig. \ref{fig:B7FWHM}), which can be related to an increase of the out-of-plane strain inside the particle.
@@ -242,10 +241,8 @@ Interestingly, no changes in the particle shape or surface strain values have be
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/D6/D6_orthogonalized_3823_edited.pdf}
     \caption{
         Sum of the intensity scattered from particle $C$ around the (111) platinum Bragg peak in the $\vec{q}_x$, $\vec{q}_z$ and $\vec{q}_y$ directions after orthogonalisation of the diffraction pattern.
-        Before (a) and after (b) introduction of ammonia in the reactor at \qty{300}{\degreeCelsius}.
-        c) After removal of both oxygen and ammonia in the reactor at \qty{300}{\degreeCelsius}, \textit{i.e.} under argon atmosphere.
         The [111]-oriented crystal truncation rod is visible parallel to the $\vec{q}_z$ axis.
-        Detector gaps lead to areas of missing intensity.
+        Detector gaps lead to rectangular areas of missing intensity.
     }
     \label{fig:D6Ortho}
 \end{figure}
@@ -265,7 +262,7 @@ The introduction of ammonia in the reactor has removed this distortion (fig. \re
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/bcdi_data/D6/fwhm_D6.pdf}
     \caption{
         Evolution of the full width at half maximum (FWHM) for particle C in the $\vec{q}_x$, $\vec{q}_y$ and $\vec{q}_z$ directions at \qty{25}{\degreeCelsius}, \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} as a function of the ammonia to oxygen ratio.
-        The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
+        The reproduction of measurements at fixed conditions yields multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
         No scans were performed at \qty{400}{\degreeCelsius} under Argon after the oxidation cycle.
     }
     \label{fig:D6FWHM}
@@ -281,7 +278,7 @@ Thus, removing ammonia and oxygen at the end of the cycle can yield a different 
 The same kind of diffraction patterns are observed at \qty{400}{\degreeCelsius} after heating under argon as in fig. \ref{fig:D6Ortho} (c), and after the introduction of ammonia as in fig. \ref{fig:D6Ortho} (b), meaning that the presence of \ce{NH_3} in the reactor lowers the strain in the particle, which can then easily be reconstructed.
 
 The particle FWHM in all three directions follows the same evolution as a function of the different atmospheres, meaning that the same phenomena occurs in all direction of the particle.
-The FWHM decreases following the introduction of ammonia both at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, and only slightly increase during the exposition to oxygen.
+The FWHM decreases following the introduction of ammonia both at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, and only slightly increases during the exposition to oxygen.
 Returning to argon atmosphere, \textit{i.e.} removing ammonia and oxygen yields FWHM values similar to those measured after heating to \qty{300}{\degreeCelsius} under argon.
 
 \begin{SCfigure}
@@ -290,13 +287,13 @@ Returning to argon atmosphere, \textit{i.e.} removing ammonia and oxygen yields 
     \caption{
         Evolution of the interplanar spacing $d_{111}$ and homogeneous strain $\epsilon_{111}$ for particle C as a function of the ammonia to oxygen ratio.
         The reference for the computation of $\epsilon_{111}$ was taken at \qty{25}{\degreeCelsius}.
-        The reproduction of measurements at fixed conditions yield multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
+        The reproduction of measurements at fixed conditions yields multiple data points, lines at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} link the data points in the order of the measurements.
         No scans were performed at \qty{400}{\degreeCelsius} under Argon after the oxidation cycle.
     }
     \label{fig:D6Latpara}
 \end{SCfigure}
 
-The evolution of the $d_{111}$ interplanar spacing is not the same as a function of different temperatures.
+The evolution of the $d_{111}$ interplanar spacing (fig. \ref{fig:D6Latpara}) is not the same as a function of different temperatures.
 The interplanar spacing of the particle under the sole presence of ammonia at \qty{300}{\degreeCelsius} is remarkably reproducible with all three measurements yielding approximately the same value as under argon atmosphere.
 A large increase of the interplanar spacing is observed when oxygen is introduced in the reactor, at a ratio of \num{0.5} with ammonia, which gives a homogeneous strain evolution of approximately \qty{0.07}{\percent} in reference to the value measured at room temperature.
 The strain at the interface with the substrate also becomes more homogeneous at this condition, slightly negative (appendix \ref{app:AppendixD6}).
@@ -321,7 +318,7 @@ The diffraction pattern was shown to not be exactly reproducible when returning 
 % It is difficult to be certain of the impact of the adsorption of ammonia since there is a lack of good quality reconstruction for comparative studies before the introduction of ammonia in the reactor, preventing an analysis of the facet strain.
 
 The transition can be observed in both the strain field energy (fig. \ref{fig:D6SFE}), and in the FWHM of the three-dimensional Bragg peak (fig. \ref{fig:D6FWHM}).
-The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy of in the FWHMs, which can tentatively be linked to a change of strain at the interface with the substrate.
+The interplanar spacing computed from the position of the Bragg peak in $q$-space shows an additional transition when first introducing oxygen in the cell, not visible in the strain field energy or in the FWHMs, which can tentatively be linked to a change of strain at the interface with the substrate.
 % The influence of the introduction of oxygen on the interfacial strain is unclear since no clear and reproducible evolution of the facet strain is visible on the particle surface (app. \ref{app:AppendixD6}).
 % The values of the heterogeneous surface strain $\epsilon_{zz}$ being very low (almost always below \qty{0.1}{\percent}, fig. \ref{fig:D6Facets}), it is also complicated to quantify the strain evolution.
 
@@ -334,7 +331,7 @@ The original mass spectrometer signal as a function of time is available in the 
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/product_comparison_no_norm.pdf}
     \caption{
-        Evolution of reaction product partial pressures during the BCDI experiment on the patterned sample containing Pt nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
+        Evolution of reaction products partial pressures during the BCDI experiment on the patterned sample containing Pt nanoparticles, at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
         Mean partial pressures during \qty{1}{\minute} at the end of each condition, recorded from a leak in the reactor output.
         The pressure under \qty{49}{\ml\per\min} of argon and \qty{1}{\ml\per\min} of ammonia has been subtracted.
     }
