--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -12,7 +12,7 @@ The relative facet size can also have an impact on the facet strain.
 Both effects could not be de-correlated in this study since facets of same structure but different orientation, \textit{i.e.} (1$\bar{1}$1) and ($\bar{1}$1$\bar{1}$), have different sizes, whereas facets of same orientation have similar sizes (e.g. (1$\bar{1}$1)-type facets in fig. \ref{fig:AmaterasuStrain1675}).
 Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\}, \{221\} and \{211\} facets were otherwise detected.
 A reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
-The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves when in the presence of interfacial defects, having an impact on the strain field.
+The evolution of the interplanar spacing as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves when in the presence of interfacial defects, having an impact on the strain field.
  % as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021}, having an impact on the strain field.
 
 % Ammonia ox
@@ -43,15 +43,15 @@ Such a scenario implies changes in the surface strain when introducing ammonia, 
 The introduction of ammonia at \qty{600}{\degreeCelsius} when measuring particle \textit{A} has had the opposite effect, \textit{i.e.} the creation of a dislocation network.
 The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different reasons.
 First, the change in the facet strain is too small to be detected with the low spatial resolution of the experiment, meaning that it is damped by being averaged with \textit{bulk} layers.
-For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be null \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
+For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be zero \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
 However, Dupraz et al \parencite*{Dupraz2022} have shown in a higher resolution experiment that reaction-induced changes in the facet strain can propagate over the bulk of the particle.
 Changes in surface strain are thus expected to be possible to measure even with a lower resolution.
-Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen species being so strongly adsorbed on the particle surface that they do no participate in the catalytic reaction.
+Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen species being so strongly adsorbed on the particle surface that they do not participate in the catalytic reaction.
 If this was indeed the case, it would mean that all three types of facets are poisoned at a \ce{NH_3} pressure equal to \qty{6}{\milli\bar}, showing a remarkably strong adsorption on many different atomic sites, and preventing catalytic activity on this nanoparticle.
 A strong evolution of particle \textit{A} was also observed under the sole presence of ammonia at \qty{600}{\degreeCelsius}, with the main structural differences being the absence of \{110\} facets (fig. \ref{fig:AmaterasuFacetsEvolution}), and a dislocation network at the interface (fig. \ref{fig:AmaterasuB}).
 Thirdly, the oxidation of ammonia at ambient pressure does not involve the adsorption of oxygen on the catalyst surface, functioning \textit{via} an Eley-Rideal mechanism \parencite{Rideal1939}, the production of \ce{NO} and \ce{N_2O} happening by the reaction of gas-phase oxygen with nitrogen adsorbed species.
 The surface strain would then not be expected to evolve during change of atmospheres.
-However, this would be in contradiction with literature finding that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
+However, this would be in contradiction with literature findings that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
 The pre-exposition of the particle to ammonia would prevent this mechanism, and thus the production of \ce{N_2}, \ce{NO} and \ce{NO_2}.
 XPS results detailed in the next chapter have also highlighted the importance of adsorbed oxygen in the reaction mechanism.
 Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when first achieving reacting condition (fig. \ref{fig:D6Latpara}, up by \qty{0.07}{\percent}, not reproduced at \qty{400}{\degreeCelsius}).
@@ -62,7 +62,7 @@ Moreover, a transition was observed in the homogeneous strain for particle \text
 Particle \textit{B}, which exhibits \{113\} facets on its surface at room temperature in addition to \{111\}, \{110\} and \{100\} facets (tab. \ref{tab:FacetCoverage}), follows a different structural evolution during the experiment.
 The surface coverage of \{110\} facets is also four times higher than for particle \textit{C}.
 Heating the sample to \qty{300}{\degreeCelsius} has decreased the visible presence of facets on the particle surface.
-While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature lattice parameter (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
+While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature interplanar spacing (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
 This effect is not reversible when removing ammonia from the reactor at \qty{300}{\degreeCelsius}, nor it is observed again when introducing ammonia at \qty{400}{\degreeCelsius}.
 It is possible to link this phenomenom to the particle first exposition to reducing atmosphere after argon and air.
 The absence of strain evolution in the same condition for particle \textit{C} (fig. \ref{fig:D6Latpara}) can be attributed to different surface states under argon from contaminants/oxides, linked to different facet coverage.
@@ -82,7 +82,7 @@ Further increasing the oxygen pressure at \qty{300}{\degreeCelsius} did not have
 The increase of strain on particle \textit{B} under reacting conditions in not reversible when removing the reagents, and not observed at \qty{400}{\degreeCelsius}.
 This means that if oxides have grown under reacting conditions at \qty{300}{\degreeCelsius}, they are stable throughout the experiment, and not removed by the sole presence of ammonia at \qty{400}{\degreeCelsius}.
 Questions on Pt nanoparticles remain, do platinum oxides grow on the sample surface, and are they stable under reacting conditions?
-Future experiments on single crystals will yield completing information to answer this question.
+Experiments on single crystals will yield completing information to answer this question (chapter 4).
 Moreover, a different behaviour is observed for particle \textit{B}, for which the homogeneous strain does not evolve with oxygen at \qty{300}{\degreeCelsius} (fig. \ref{fig:D6Latpara}), which would necessarily link the growth of surface oxides to the particle shape, facet coverage, and initial strain state.
 Kim et al. \parencite*{Kim2018} have also shown that the introduction of oxygen was followed by its adsorption on edge sites, visible by magnitude changes in the neighbouring displacement field.
 Their hypothesis could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
@@ -109,7 +109,7 @@ Two main differences are noted in the current study, first a defect seems to app
 Secondly, the transformation of the particle shape is not reversible upon removal of the reactants.
 The reaction product partial pressures can be seen to drop in the minutes following the return to inert atmosphere at \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}).
 %, which shows that the sample has stopped its catalytic activity.
-From the evolution of the strain field energy, the lattice parameter, and the FWHM, it is likely that the magnitude of the defect appearing at \qty{400}{\degreeCelsius} under inert atmosphere has been increased from the reaction, which irreversibly transformed the particle shape.
+From the evolution of the strain field energy, the interplanar spacing, and the FWHM, it is likely that the magnitude of the defect appearing at \qty{400}{\degreeCelsius} under inert atmosphere has been increased from the reaction, which irreversibly transformed the particle shape.
 Defect dynamics have also been reported during the catalytic oxidation of \ce{CO} on Pt nanoparticles \parencite{Carnis2021b} using BCDI.
 These results tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
 The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of particle surface.
