--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -2,12 +2,13 @@
 
 % introduce sxrd
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
-The experiment focused on measuring the catalyst selectivity above the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
+The experiment focused on measuring the catalyst selectivity before and above the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
 The transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward.
+The existence of a rhodium surface oxide during reacting conditions favouring \ce{NO} is revealed.
 
 Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as \ce{NO} and atomic oxygen) were linked to out-of-plane contraction.
-This change in relaxation has an impact on the band structure, and therefore on the catalytic properties as proposed in the d-band model \parencite{Mavrikakis1998}.
-Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy, or if it holds a broader applicability to the constituent elements of the alloy, such as different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
+This change in relaxation has an impact on the band structure, and therefore on the catalytic properties as proposed in the $d$-band model \parencite{Mavrikakis1998}.
+Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy, or if it holds a broader applicability to the constituent elements of the alloy, such as different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen partial pressure ratio.
 
 The previous chapter has highlighted our results on Pt nanoparticles during ammonia oxidation.
 The average shape of multi-faceted Pt nanoparticles was measured at the SixS beamline under the reaction using surface x-ray diffraction.
@@ -19,7 +20,7 @@ The importance of the initial particle shape and facet coverage on its structura
 To fully understand the impact of the Pt surface structure on the catalyst selectivity, two different single crystals, Pt(111) and Pt(100) will here be measured by SXRD.
 In-plane reciprocal space maps were first carried out to search for new structures, and surface reconstructions induced by the reaction environment, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
 Crystal truncation rods were measured to probe surface relaxation effects, and to assert the average roughness of the catalyst surface.
-Additional $L$-scans were performed at HK coordinates of the newly discovered feature to investigate the potential corresponding 3D structures.
+Additional super-structure rods were performed at HK coordinates of the newly discovered features to investigate the potential corresponding out-of-plane structures.
 Reflectivity measurements were conducted to gather further insights into the various layers existing on the catalyst surface, along with their respective roughness.
 
 % introduce xps
@@ -63,12 +64,12 @@ Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make 
 }
 \caption{
     Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with SXRD.
-    The duration of each condition was approximately \qty{8}{\hour}.
+    The duration of each condition was at least \qty{8}{\hour}.
     }
 \label{tab:ConditionsSXRD}
 \end{table}
 
-Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
+Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
 The total atmosphere is not anymore kept constant by the use of Argon between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
 
 \begin{table}[!htb]
@@ -100,29 +101,30 @@ The total atmosphere is not anymore kept constant by the use of Argon between ea
 \label{tab:ConditionsXPS}
 \end{table}
 
-The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
+The use of a residual gas analyser during \textit{in situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
 
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
 The surface x-ray diffraction experiment was performed at the SixS beamline.
-The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
+The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor.
+This enables the cleaning of the sample surface by sputtering (bombardment with argon ions) and annealing directly in the reactor chamber, under UHV, before exposing the sample to different atmospheres.
 Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
 
 To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
 The volume inside the XCAT reactor (fig. \ref{fig:SampleSXRD} - a) was increased by \textit{opening} the chamber while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
 The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
-The sample height was tuned to maximise the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{5}{\minute} at room temperature.
-The efficiency of the sputtering could be observed directly by a quick increase of the reactor pressure in the first minutes linked to the removal of surface impurities, followed by a progressive decrease of the reactor pressure from pumping.
-The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{30}{\minute} for annealing, the removal of impurities could be directly visualised by the increase of the reactor pressure.
+The sample height was tuned to maximise the sputtering current and surface cleaning, the Pt surface was then cleaned by sputtering for \qty{30}{\minute} at room temperature.
+The sample was then heated up to \qty{800}{\degreeCelsius} for \qty{15}{\minute} for annealing.
+The sputtering and annealing efficiency could be observed directly by a quick increase of the reactor pressure in the first minutes, linked to the removal of surface impurities, and followed by a progressive decrease of the reactor pressure from pumping.
 The same procedure was applied to both Pt(111) and Pt(100) surfaces.
 
 The experiment was performed at an energy of \qty{18.44}{\keV}.
 The alignment of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
-In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
-The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}).
-This allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
+In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence (\ang{0.3}) so that the beam recovers the entire sample surface.
+The beam footprint is larger than the sample surface, which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}).
+This allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects.
 Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:PolarisationEffect}).
-The sample plane was verified at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
+The sample alignment was verified at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
 The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
 \begin{figure}[!htb]
@@ -130,23 +132,25 @@ The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also rec
     \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/SampleAndSetups.pdf}
     \caption{
         a) Large XCAT reactor.
-        b) Round single crystal set on sample holder, the crystal presents here a (111) top facet.
-        The surface area of the single crystal is \qty{\approx 5e7}{\um^2}, the Pt(100) sample has the same shape.
-        c) Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Synchrotron (right), taken from Held et al. \parencite*{Held2020}.
+        b) Round single crystal set on sample holder, the crystal presents here a (111) top surface.
+        The surface area of the single crystal is \qty{\approx 50}{\mm^2}, the Pt(100) sample has the same shape.
+        c) Detailed drawing of the XPS chamber at the B07 beamline at the Diamond Light Source (right), taken from Held et al. \parencite*{Held2020}.
     }
     \label{fig:SampleSXRD}
 \end{figure}
 
 \subsection{Experimental setup for x-ray photoelectron spectroscopy} \label{sec:XPS111}
 
-The NAP-XPS experiment was performed at the B07 end station at the Diamond Light Source \parencite{Held2020}.
-The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarisation vector.
+The NAP-XPS experiment was performed at the B07 end station at Diamond Light Source \parencite{Held2020}.
+The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane.
+%, \textit{i.e.} close to the magic angle with respect to the polarisation vector.
 The cone aperture of the analyser has a diameter equal to \qty{0.3}{\mm}.
 %, which is slightly larger than the footprint of the beam on the sample at normal emission equal to \qty{0.2}{\mm}.
 Four different pumping stages protect the vacuum in the UHV section of the analyser from the endstation, that can reach a working pressure of \qty{100}{\milli\bar}.
-The ﬁrst two differential pumping stages each contain a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
-The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyser, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
+The ﬁrst two differential pumping stages contain each a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
+The increased attenuation through high pressures is compensated by limiting the photoelectron path length to sub-millimetre range, from the sample surface to the analyser.
+The typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
 
-The energy or the incident photons was chosen to optimised the photoelectron signal, as a compromise between electron transmission and excitation cross-sections, which respectively increases and decreases as a function of the photon energy.
-Guidelines on how to choose the best instrumental settings are detailed in \parencite{Held2020}.
+The energy or the incident photons was chosen to optimise the photoelectron signal, as a compromise between electron transmission and excitation cross-sections, which respectively increase and decrease as a function of the photon energy.
+Guidelines on how to choose the best instrumental settings are detailed in Held et al. \parencite*{Held2020}.
 The combined energy resolution of the beamline and analyser, while working in NAP conditions, ranged between \qty{0.8}{\eV} and \qty{1.2}{\eV}.
