--- a/Sections/6_Appendix/DiffractionVocab.tex
+++ b/Sections/6_Appendix/DiffractionVocab.tex
@@ -14,7 +14,7 @@
     (x, y, z) & Points coordinates within the unit cell, expressed in terms of a, b and c units.\\
     & z is negative when situated below the surface. \\
     {[}u v w{]} & Direction in real space. \\
-    \textless{}u v w\textgreater{} & Set of equivalent directions. \\
+    % \textless{}u v w\textgreater{} & Set of equivalent directions. \\
     (hkl) & Miller indices detailing orientation of a family of parallel crystalline planes. \\
     \{hkl\} & Equivalent families of crystallographic planes by lattice symmetry. \\
     $d_{hkl}$ & Interplanar spacing between (hkl) crystal planes (\unit{\angstrom}). \\
@@ -22,7 +22,7 @@
     \end{tabular}%
 }
 \caption{
-    Symbols used in crystallography for the description of real and reciprocal space structures.
+    Symbols used in this thesis for the description of real and reciprocal space structures.
     Subscript $_s$ used to distinguish surface from underlying structure  \parencite{Wood1964, Willmott}.
     }
 \label{tab:Vocab}
