--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,21 @@ volume = {90},
 year = {2002}
 }
 
+@Article{Singer2018,
+author={Singer, A. and Zhang, M. and Hy, S. and Cela, D. and Fang, C. and Wynn, T. A. and Qiu, B. and Xia, Y. and Liu, Z. and Ulvestad, A. and Hua, N. and Wingert, J. and Liu, H. and Sprung, M. and Zozulya, A. V. and Maxey, E. and Harder, R. and Meng, Y. S. and Shpyrko, O. G.},
+title={Nucleation of dislocations and their dynamics in layered oxide cathode materials during battery charging},
+journal={Nature Energy},
+year={2018},
+month={Aug},
+day={01},
+volume={3},
+number={8},
+pages={641-647},
+abstract={Lithium-rich layered oxides (LRLO) are among the leading candidates for the next-generation cathode material for energy storage, delivering 50{\%} excess capacity over commercially used compounds. Despite excellent prospects, voltage fade has prevented effective use of the excess capacity, and a major challenge has been a lack of understanding of the mechanisms underpinning the voltage fade. Here, using operando three-dimensional Bragg coherent diffractive imaging, we directly observe the nucleation of a mobile dislocation network in LRLO nanoparticles. The dislocations form more readily in LRLO as compared with a classical layered oxide, suggesting a link between the defects and voltage fade. We show microscopically how the formation of partial dislocations contributes to the voltage fade. The insights allow us to design and demonstrate an effective method to recover the original high-voltage functionality. Our findings reveal that the voltage fade in LRLO is reversible and call for new paradigms for improved design of oxygen-redox active materials.},
+issn={2058-7546},
+doi={10.1038/s41560-018-0184-2},
+}
+
 @article{Cornelius2011,
 author = "Cornelius, T. W. and Carbone, D. and Jacques, V. L. R. and Sch{\"{u}}lli, T. U. and Metzger, T. H.",
 title = "{Three-dimensional diffraction mapping by tuning the X-ray energy}",
@@ -21,7 +36,7 @@ year = "2011",
 volume = "18",
 number = "3",
 pages = "413--417",
-month = "May",
+month = "05",
 doi = {10.1107/S0909049511003190},
 abstract = {Three-dimensional reciprocal-space maps of a single SiGe island around the Si(004) Bragg peak are recorded using an energy-tuning technique with a microfocused X-ray beam with compound refractive lenses as focusing optics. The map is in agreement with simulated data as well as with a map recorded by an ordinary rocking-curve scan. The energy-tuning approach circumvents both the comparatively large sphere of confusion of diffractometers compared with nanostructures and vibrations induced by motors. Thus, this method offers new possibilities for novel combinations of three-dimensional micro- and nano-focused X-ray diffraction with complex {\it in situ} sample environments such as scanning probe microscopes.},
 keywords = {X-ray diffraction, nanofocused and microfocused XRD, energy scan, three-dimensional reciprocal-space mapping},
@@ -2872,7 +2887,7 @@ abstract = {X-ray measurements performed on a variety of materials demonstrate t
   pages = {1145--1148},
   numpages = {0},
   year = {1983},
-  month = {Apr},
+  month = {04},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.50.1145},
 }
@@ -3036,6 +3051,16 @@ doi = {doi.org/10.1016/j.susc.2004.12.027},
 author = {A. Scheibe and U. Lins and R. Imbihl},
 keywords = {Platinum, Stepped platinum surface, Ammonia oxidation, Kinetics},
 abstract = {The kinetics of ammonia oxidation with oxygen have been investigated in the 10−5 and 10−4mbar range on Pt(533) and Pt(443). Only N$_2$ and NO but no N$_2$O were detected as reaction products. The dependence of product formation on temperature and on the partial pressures of the reactants has been studied under steady state conditions. The reactive sticking coefficients were determined under reaction conditions with sreac of ammonia reaching nearly 0.2. The Pt(533) surface was found to be catalytically more active than Pt(443) by a factor of 2–4.}
+}
+
+@article {Fierro1990,
+title = "Redistribution of Platinum Metals within an Ammonia Oxidation Plant",
+journal = "Platinum Metals Review",
+year = "1990",
+volume = "34",
+number = "2",
+pages = "62-70",
+author = "Fierro, J. L. G. and Palacios, J. M. and Tomas, F.",
 }
 
 @Article{Fierro1992,
@@ -3461,19 +3486,6 @@ title = {{X-ray ptychographic topography, a new tool for strain imaging}},
 year = {2020}
 }
 
-@article{Patterson1939,
-abstract = {The problem of the diffraction of x-rays by small crystalline particles is discussed by the methods of Fourier analysis, and the calculation of the intensity of the x-ray scattering from a single particle is reduced to the evaluation of a simple Fourier transform. This approach leads immediately to the interference functions for the parallellepipedon and the octahedron as obtained by other authors. In addition, it makes possible the detailed discussion of the interference functions for the tetrahedron, the rhombic dodecahedron, the ellipsoid, and the elliptic cylinder. The method is shown to be applicable to any polyhedron. A simple method is also given for calculating the interference function and its integral breadth for specific directions of departure from the whole-numbered points. This is applied to obtain a partial discussion of the scattering from the tetrahexahedron and the trisoctahedron. {\textcopyright} 1939 The American Physical Society.},
-author = {Patterson, A. L.},
-doi = {10.1103/PhysRev.56.972},
-issn = {0031899X},
-journal = {Physical Review},
-number = {10},
-pages = {972--977},
-title = {{The diffraction of X-rays by small crystalline particles}},
-volume = {56},
-year = {1939}
-}
-
 @article{Quinn2021,
 abstract = {The Hard X-ray Nanoprobe beamline, I14, at Diamond Light Source is a new facility for nanoscale microscopy. The beamline was designed with an emphasis on multi-modal analysis, providing elemental mapping, speciation mapping by XANES, structural phase mapping using nano-XRD and imaging through differential phase contrast and ptychography. The 185 m-long beamline operates over a 5 keV to 23 keV energy range providing a ≤50 nm beam size for routine user experiments and a flexible scanning system allowing fast acquisition. The beamline achieves robust and stable operation by imaging the source in the vertical direction and implementing horizontally deflecting primary optics and an overfilled secondary source in the horizontal direction. This paper describes the design considerations, optical layout, aspects of the hardware engineering and scanning system in operation as well as some examples illustrating the beamline performance.},
 author = {Quinn, Paul D and Alianelli, Lucia and Gomez-gonzalez, Miguel and Mahoney, David and Cacho-nerin, Fernando and Peach, Andrew and Parker, Julia E},
@@ -3562,20 +3574,6 @@ journal = {Nature Photonics},
 publisher = {Springer US},
 title = {{Broadband coherent diffractive imaging}},
 year = {2020}
-}
-
-@article{Leake2019,
-author = "Leake, Steven J. and Chahine, Gilbert A. and Djazouli, Hamid and Zhou, Tao and Richter, Carsten and Hilhorst, Jan and Petit, Lucien and Richard, Marie-Ingrid and Morawe, Christian and Barrett, Raymond and Zhang, Lin and Homs-Regojo, Roberto A. and Favre-Nicolin, Vincent and Boesecke, Peter and Sch{\"{u}}lli, Tobias U.",
-title = "{The Nanodiffraction beamline ID01/ESRF: a microscope for imaging strain and structure}",
-journal = "Journal of Synchrotron Radiation",
-year = "2019",
-volume = "26",
-number = "2",
-pages = "571--584",
-month = "Mar",
-doi = {10.1107/S160057751900078X},
-abstract = {The ID01 beamline has been built to combine Bragg diffraction with imaging techniques to produce a strain and mosaicity microscope for materials in their native or {\it operando} state. A scanning probe with nano-focused beams, objective-lens-based full-field microscopy and coherent diffraction imaging provide a suite of tools which deliver micrometre to few nanometre spatial resolution combined with 10${\sp {$-$}5}$ strain and 10${\sp {$-$}3}$ tilt sensitivity. A detailed description of the beamline from source to sample is provided and serves as a reference for the user community. The anticipated impact of the impending upgrade to the ESRF {--} Extremely Brilliant Source is also discussed.},
-keywords = {X-ray, full-field microscopy, scanning microscopy, Bragg diffraction, coherent diffraction imaging},
 }
 
 @article{Abuin2019,
@@ -7398,6 +7396,31 @@ pages = {342--344},
 title = {{Extending the methodology of X-ray crystallography to non-crystalline specimens}},
 volume = {400},
 year = {1999}
+}
+
+@article{Alcock1960,
+author = {Alcock, C. B. :  and Hooper, G. W. :  and Nyholm, Ronald Sydney },
+title = {Thermodynamics of the gaseous oxides of the platinum-group metals},
+journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+volume = {254},
+number = {1279},
+pages = {551-561},
+year = {1960},
+doi = {10.1098/rspa.1960.0040},
+}
+
+@article{Westerstrom2008,
+doi = {10.1088/0953-8984/20/18/184018},
+year = {2008},
+month = {04},
+publisher = {},
+volume = {20},
+number = {18},
+pages = {184018},
+author = {R Westerström and J G Wang and M D Ackermann and J Gustafson and A Resta and A Mikkelsen and J N Andersen and E Lundgren and O Balmes and X Torrelles and J W M Frenken and B Hammer},
+title = {Structure and reactivity of a model catalyst alloy under realistic conditions},
+journal = {Journal of Physics: Condensed Matter},
+abstract = {Using a combined experimental and theoretical approach, we show that a thin RhO2 oxide film forms on a Pt25Rh75(100)  surface at elevated oxygen pressures and temperatures prior to the bulk oxidation. By the use of in situ surface x-ray diffraction under realistic CO oxidation reaction conditions, we show that the onset of the growth of thin RhO2 oxide film coincides with an increase in CO2  production. During the reaction, the consumed oxide film is continuously re-grown by oxygen in the gas phase. Our theoretical results strongly suggest that the CO adsorbs on the metallic substrate but reacts with the O in the RhO2 oxide film at the border between the RhO2  oxide film and the metallic substrate. This scenario could explain the experimental observations of oxidation reactions on other late transition metal surfaces as well as on their corresponding nanoparticles under realistic conditions.}
 }
 
 @article{Chapman2006,
