--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -7,7 +7,7 @@ It was shown that \ce{NO} production coincides with significant changes of the s
 Moreover, changes in the surface relaxation related to the catalyst selectivity were reported.
 
 % Single crystal ok but
-Using single crystals as model catalysts to understand \textit{in-situ} and \textit{operando} the structure-activity relationship offers some advantages.
+Using single crystals as model catalysts to understand \textit{in situ} and \textit{operando} the structure-activity relationship offers some advantages.
 For example, the large surface area increases the surface signal.
 It is also possible to isolate specific facets to progressively build up the understanding of the role of the sample surface on the catalytic activity \parencite{Hejral2016, Resta2020a}.
 However, single crystals fall short when aiming at closing the material gap since they only exhibit a single crystallographic orientation on their surface, and are much larger (almost a \unit{cm} large) than the width of Pt-Rh gauzes used for the oxidation of ammonia (few 10s of \unit{\micro\meter} large, \cite{Kaiser1909}).
@@ -18,11 +18,11 @@ Therefore, the catalytic structure-activity relationships of Pt nanoparticles wi
 Pt-Rh nanoparticles have recently been successfully studied with BCDI during the \ce{CO} oxidation \parencite{Kim2021}, but the presence of compositional strain in bi-metallic catalysts makes the study of surface strain increasingly complex \parencite{Kawaguchi2019}.
 
 % sxrd
-It is first intended to measure the signal scattered from $\alpha$-\ce{Al_2O_3} (also known as sapphire) supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline.
+It is first intended to measure the signal scattered from $\alpha$-\ce{Al_2O_3} (sapphire) supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline.
 At grazing incidence, the beam footprint occupies a large ratio of the sample surface, covered by nanoparticles.
 The scattered beam is then proportional to their average behaviour \parencite{Nolte2008, Hejral2013, Hejral2016}.
 
-As seen in the previous chapter, surfaces give rise to crystal truncation rods (CTR) in the reciprocal space, the intensity of which is related to the facet size, roughness and strain.
+As seen in the previous chapter, surfaces give rise to crystal truncation rods (CTR) in the reciprocal space, the intensity of which is related to the facet size, roughness and atomic structure.
 The average nanoparticle shape and structure will be probed by studying the intensity of crystal truncation rods in directions perpendicular to the expected facets on the nanoparticle surface.
 Prior experiments with similar samples \parencite{Dupraz2017, Li2020, Lim2021, Dupraz2022} have shown that the particles exhibit a Winterbottom shape \parencite{Winterbottom1967, Boukouvala2021}, typical of nanoparticles epitaxied on a substrate, with mainly \{111\}, \{110\}, and \{100\} facets, and a [111] orientation perpendicular to the substrate.
 
@@ -63,14 +63,14 @@ All of the position indicators are constituted of platinum nanoparticle as well,
     \label{fig:Mask}
 \end{figure}
 
-The epitaxial relationship between the platinum nanoparticles and the $\alpha$-\ce{Al_2O_3} substrate has been shown to consist of Pt \{111\} planes on top of the $\alpha$-\ce{Al_2O_3} (0001) facet (fig. \ref{fig:Epitaxy} - \cite{Farrow1993}).
+The epitaxial relationship between the platinum nanoparticles and the $\alpha$-\ce{Al_2O_3} substrate has been shown to consist of Pt \{111\} planes on top of the $\alpha$-\ce{Al_2O_3} (0001) surface (fig. \ref{fig:Epitaxy} - \cite{Farrow1993}).
 This arrangement can be described with the following matrix, $\alpha$-\ce{Al_2O_3}(0001)-$\begin{pmatrix} \sqrt{3} & 0\\ 0 & \sqrt{3} \end{pmatrix}$-R\ang{30}.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{/home/david/Documents/PhD/Figures/introduction/Epitaxy.pdf}
     \caption{
-        Epitaxy relationship between \{$111$\} Pt planes and [0001]-oriented sapphire substrate.
+        Epitaxial relationship between $\{111\}$ Pt planes and [0001]-oriented sapphire substrate.
     }
     \label{fig:Epitaxy}
 \end{figure}%
@@ -84,15 +84,15 @@ Lattice strain in diffraction is usually defined as the difference between the r
 
 In this case, when computing the misfit strain, \textit{i.e.} the strain induced in the Pt nanoparticles by the substrate due to slightly different hexagonal lattices, the reference lattice parameter is equalled to the in-plane lattice parameter of sapphire, $a_{Sapphire} = \qty{4.76}{\angstrom}$.
 The lattice parameter of the larger hexagonal arrangement of the platinum atoms on the (111) surface is equal to $\sqrt{3} a_{Pt} / \sqrt{2}$.
-At room temperature, the misfit strain computed from literature values, $a_{Pt} = \qty{3.92}{\angstrom}$ \parencite{Waseda1975} is equal to $\epsilon = \qty{0.86}{\percent}$.
+At room temperature, the misfit strain computed from literature values, $a_{Pt} = \qty{3.92}{\angstrom}$ \parencite{Waseda1975}, is equal to $\epsilon = \qty{0.86}{\percent}$.
 To fit on the (0001) sapphire surface, the platinum atoms at the interface are expected to suffer compressive in-plane strain.
 
 \subsection{Catalysis reactor for near-ambient pressure \textit{operando} studies}
 
 The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
-Similar scans were also performed on the empty reactor/sample holder to ensure the absence of activity towards the ammonia oxidation.
+Similar measurements were also performed on the empty reactor/sample holder to ensure the absence of activity towards the ammonia oxidation.
 
-The heater was calibrated by measuring the sample temperature at different pressures, with a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
+The heater was calibrated by measuring the sample temperature at different argon pressures, with a type K thermocouple fixed on the sample, as a function of the current intensity (fig. \ref{fig:TempRamps} - a).
 \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
 % The experimental data points were fit to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum, or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the ammonia oxidation are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
@@ -115,6 +115,7 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \end{table}
 
 A temperature ramp at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions.
+The patterned sample was used.
 A constant gas flow is used that consists of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
 In the frame of this thesis, the same ratio between incoming gas flows in assumed to be respected between the different gas partial pressures, in this case the partial pressure of oxygen is then equal to \qty{80}{\milli\bar}, the partial pressure of ammonia to \qty{10}{\milli\bar}, and the partial pressure of argon to \qty{410}{\milli\bar}.
 
@@ -127,7 +128,7 @@ In the frame of this thesis, the same ratio between incoming gas flows in assume
         b) Evolution of the partial pressures in the RGA chamber under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}).
         Reactor pressure of \qty{0.3}{\bar}, and increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius}.
         The ramp is performed with 100 steps, each lasting \qty{10}{\second}.
-        The partial pressure of oxygen is omitted for simplicity.
+        The partial pressure of oxygen and argon are omitted for simplicity.
     }
     \label{fig:TempRamps}
 \end{figure}
@@ -141,7 +142,7 @@ The production of nitrous oxide stays at low values during the temperature ramp,
 
 According to these primary results, the study of the oxidation of ammonia was first carried out at \qty{300}{\degreeCelsius}, a temperature before the catalyst light off.
 The measurements were then performed at \qtylist{500; 600}{\degreeCelsius} to measure the importance of the temperature after catalyst light off on the reaction selectivity.
-To probe the importance of the \ce{O_2}/\ce{NH_3} ratio on the reaction selectivity, and its link with the catalyst structure, ammonia is first introduced in the reactor, followed by a step by step increase of the oxygen pressure.
+To probe the importance of the \ce{O_2}/\ce{NH_3} ratio between partial pressures on the reaction selectivity, and its link with the catalyst structure, ammonia is first introduced in the reactor, followed by a step by step increase of the oxygen pressure.
 The different gas conditions used at each temperature are resumed in tab. \ref{tab:ConditionsNanoparticles}.
 
 \begin{table}[!htb]
