--- a/Sections/6_Appendix/Nanoparticles.tex
+++ b/Sections/6_Appendix/Nanoparticles.tex
@@ -1,18 +1,8 @@
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS\_2021\_01/FacetAnalyser/FacetDispEvolution.pdf}
-    \caption{
-        Mean value and standard deviation of the displacement ($\vec{u}_{\hat{q_z}}$) distribution as a function of the angle between the normal of each facet on the particle surface and the [111] direction.
-        Upwards and downwards arrow are represented for respectively positive and negative displacement.
-    }
-    \label{fig:AmaterasuDisplacement}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
     \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/200.pdf}
     \caption{
-        Integrated intensity in a \ang{1} range around the value of the (200) scattering angle, as a function of the in-plane sample angle $\omega$.
+        Integrated intensity in a \ang{0.1} range around the value of the (200) scattering angle, as a function of the in-plane sample angle $\omega$.
     }
     \label{fig:Epitaxy200}
 \end{figure}
@@ -21,22 +11,50 @@
     \centering
     \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/111.pdf}
     \caption{
-        Integrated intensity in a \ang{1} range around the value of the (111) scattering angle, as a function of the in-plane sample angle $\omega$.
+        Integrated intensity in a \ang{0.1} range around the value of the (111) scattering angle, as a function of the in-plane sample angle $\omega$.
     }
     \label{fig:Epitaxy111}
 \end{figure}
 
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_300.pdf}
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_500.pdf}
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/epitaxy/powder_600.pdf}
-%     \caption{
-%         Scattered intensity as a function of $\delta$ showing the Bragg peak originating from the substrate near \ang{16}, the
-%         (220) powder ring near \ang{27.9} and the (220) Bragg peak from the [111] oriented nanoparticles near \ang{28.1}.
-%     }
-%     \label{fig:PowderNanoparticles}
-% \end{figure}
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_300.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt nanoparticles at \qty{300}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+    }
+    \label{fig:RGA300SXRDNanoparticles}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_500.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt nanoparticles at \qty{500}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+    }
+    \label{fig:RGA500SXRDNanoparticles}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_600.pdf}
+    \caption{
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt nanoparticles at \qty{600}{\degreeCelsius}.
+        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
+    }
+    \label{fig:RGA600SXRDNanoparticles}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS\_2021\_01/FacetAnalyser/FacetDispEvolution.pdf}
+    \caption{
+        Mean value and standard deviation of the displacement ($\vec{u}_{\hat{q_z}}$) distribution as a function of the angle between the normal of each facet on the particle surface and the [111] direction.
+        Upwards and downwards arrow are represented for respectively positive and negative displacement.
+    }
+    \label{fig:AmaterasuDisplacement}
+\end{figure}
 
 \begin{figure}[!htb]
     \centering
@@ -57,42 +75,11 @@
     \label{fig:FitB73D}
 \end{figure}
 
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_300.pdf}
-    \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{300}{\degreeCelsius}.
-        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
-    }
-    \label{fig:RGA300SXRDNanoparticles}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_500.pdf}
-    \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{500}{\degreeCelsius}.
-        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
-    }
-    \label{fig:RGA500SXRDNanoparticles}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_03_SXRD_NH3/figures/rga/rga_600.pdf}
-    \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the SXRD experiment on the non-patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{600}{\degreeCelsius}.
-        Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
-    }
-    \label{fig:RGA600SXRDNanoparticles}
-\end{figure}
-
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/rga_300.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the BCDI experiment on the patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{300}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the BCDI experiment on the patterned sample containing Pt nanoparticles at \qty{300}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
     }
     \label{fig:RGA300BCDINanoparticles}
@@ -102,7 +89,7 @@
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2021_06_BCDI_NH3/gas_analysis/figures/rga_400.pdf}
     \caption{
-        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the BCDI experiment on the patterned sample containing Pt[111]||Al$_2$O$_3$[0001] nanoparticles at \qty{400}{\degreeCelsius}.
+        Time dependent partial pressures recorded from a leak in the reactor output by a residual gas analyser (RGA) during the BCDI experiment on the patterned sample containing Pt nanoparticles at \qty{400}{\degreeCelsius}.
         Vertical dotted lines indicate transitions between two conditions for which the \ce{NH_3} and \ce{O_2} flow is indicated in the legend.
     }
     \label{fig:RGA400BCDINanoparticles}
