--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -1,61 +1,3 @@
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/hscan_fit_768.pdf}
-%     \caption{
-%     }
-%     \label{fig:HScan}
-% \end{figure}
-
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_481-516_patched.pdf}
-%     \caption{
-%         Reciprocal space maps collected under \qty{420}{\milli\bar} of argon and \qty{80}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}after the introduction of oxygen.
-%         The angle between the gray vectors is equal to \ang{42.65}.
-%     }
-%     \label{fig:481QSpace}
-% \end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
-    \caption{
-    Sketch of Pt(111) surface and Pt(111)-p(6x6)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
-    Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} structure (b).
-    }
-    \label{fig:Pt11180O2Structures}
-\end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
-    \caption{
-    Sketch of Pt(111) surface and Pt(111)-p(26x26)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
-    }
-    \label{fig:Pt111AlphaPtO2}
-\end{figure}
-
-% \begin{figure}[!htb]
-%     \centering
-%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_2064-2072_patched_hex.pdf}
-%     \caption{
-%         Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, from \qty{24}{\hour}\qty{22}{\minute} to \qty{25}{\hour}\qty{43}{\minute} after the introduction of oxygen.
-%         The angle between vectors of the same color is \ang{120}.
-%         The angle between vectors going from the center to neighbouring peaks at the same magnitude of the scattering vector (e.g. purple and gray peaks) is equal to \ang{12}.
-%     }
-%     \label{fig:2064QSpace}
-% \end{figure}
-
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/l_scans_low_oxygen.pdf}
-    \caption{
-        Out-of plane measurements perpendicular to peaks observed in in-plane maps under \qty{5}{\milli\bar} of \dioxygen.
-    }
-    \label{fig:LScans05}
-\end{figure}
-
 \begin{table}[!htb]
     \centering
     \resizebox{\textwidth}{!}{%
@@ -95,6 +37,35 @@
     }
     \label{tab:InterplanarSpacingsPt111Oxygen}
 \end{table}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
+    % \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
+    \caption{
+    Sketch of Pt(111) surface and Pt(111)-p(6x6)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
+    % Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} structure (b).
+    }
+    \label{fig:Pt11180O2Structures}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
+    \caption{
+    Sketch of Pt(111) surface and Pt(111)-p(26x26)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
+    }
+    \label{fig:Pt111AlphaPtO2}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/l_scans_low_oxygen.pdf}
+    \caption{
+        SSR observed under \qty{5}{\milli\bar} of \dioxygen.
+    }
+    \label{fig:LScans05}
+\end{figure}
 
 \begin{figure}[!htb]
     \centering
